--- a/new-game.html
+++ b/new-game.html
@@ -275,7 +275,7 @@
             };
             window.parent.postMessage(msg, "*");
             
-            alert("Your score was successfully submitted!");
+            // alert("Your score was successfully submitted!");
             window.location.reload(false); 
         });
     }
