--- a/new-game.html
+++ b/new-game.html
@@ -207,7 +207,8 @@
             }
 
             $( "#b" )
-                .append( "<img src='https://i.ibb.co/C22XBdd/badger.png' id='badger'></img>" )
+                // .append( "<img src='https://i.ibb.co/C22XBdd/badger.png' id='badger'></img>" )
+                .append( "<img src='badger.png' id='badger'></img>" )
                 .css("left", x*170);
 
             var tick = setTimeout(function() { 
